@@ -32,7 +32,7 @@
                     <{foreach item=image from=$images}>
                         <{if $image.alb_name}><div class='selimages col-xs-12 col-sm-12'><h5 class='modal-title' style='width:100%'><{$image.alb_name}></h5></div><{/if}>
                         <div class='selimages col-xs-12 col-sm-4'>
-                        <input id='<{$image.id}>' class='imgSelect1 img-responsive wgg-album-img <{if $image.selected}>wgg-modal-selected<{/if}>' type='image' src='<{$image.medium}>' alt='<{$image.title}>' style='padding:3px;' value='<{$image.name}>'>
+                        <input id='<{$image.id}>' class='imgSelect1 img-responsive wgg-album-img <{if $image.selected}>wgg-modal-selected<{/if}>' type='image' src='<{$image.thumb}>' alt='<{$image.title}>' style='padding:3px;' value='<{$image.name}>'>
                         </div>
                     <{/foreach}>
                 </div>
@@ -250,7 +250,7 @@
                 <div class='modal-body'>
                     <{foreach item=image from=$images}>
                         <{if $image.alb_name}><h4 class='modal-title'><{$image.alb_name}></h4><{/if}>
-                        <input class='imgGrid<{$m}>' type='image' src='<{$image.medium}>' alt='<{$image.title}>'
+                        <input class='imgGrid<{$m}>' type='image' src='<{$image.thumb}>' alt='<{$image.title}>'
                                style='padding:3px;max-height:150px;max-width:200px' value='<{$image.name}>' onclick='selectGridImage(this, <{$m}>)'>
                     <{/foreach}>
                 </div>
